fixed cube on mobile and added a picture under experience

--- a/src/components/Cube/Cube.module.css
+++ b/src/components/Cube/Cube.module.css
@@ -147,6 +147,13 @@
     }
 }
 
+/* Large phones / small tablets */
+@media screen and (max-width: 768px) {
+    .container {
+        margin-top: 20px;
+    }
+}
+
 
 
 
